# truth-ctx

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.gemini/: settings.json
src/: main.rs
src/kernel/: memory.rs  mod.rs  scheduler.rs  sentinel.rs
src/mcp/: mod.rs
src/monitor/: mod.rs
src/setup/: mod.rs
